--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -302,8 +302,8 @@
               <a class="nav-link" href="{% url 'core:jobs_page' %}">Jobs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'core:manual_submission' %}"
-                >Manual Submission</a
+              <a class="nav-link" href="{% url 'core:application_assistance' %}"
+                >Application Assistant</a
               >
             </li>
             <li class="nav-item">
