--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,6 +12,16 @@
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="{% static 'core/icons/icon.png' %}"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="{% static 'core/icons/icon.png' %}"
+      type="image/x-icon"
     />
     <style>
       :root {
